# motohs

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  partitions.csv  sdkconfig
.github/: release-changelog-configuration.json
.github/workflows/: clang.yml  release-changelog.yml
src/: CMakeLists.txt  main.cpp
src/audio_module/: CMakeLists.txt  audio_device.hpp  audio_manager.hpp  mic.hpp
src/button/: CMakeLists.txt  button.cpp  button.hpp  button_actions.hpp
src/cli/: CMakeLists.txt  cmd_system.cpp  component.mk  console.cpp  console.h
src/denoise/: CMakeLists.txt  equalizer_coeff.h  filter_rnnoise.c  filter_rnnoise.h  nnom_port.h  webrtc_ns.cpp  webrtc_ns.hpp
src/logging/: CMakeLists.txt  logger.h
src/system_task/: CMakeLists.txt  system_task.cpp  system_task.hpp
